--- a/index.html
+++ b/index.html
@@ -9,32 +9,34 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <section class="container">
-        <div class="card">
-            <img src="./images/image-equilibrium.jpg" alt="">
-            <div class="text">
-                <h1 class="title">Equilibrium #3429</h1>
-                <p>Our Equilibrium collection promotes balance and calm.</p>
-            </div>
-            <div class="data">
-                <div class="value">
-                    <img src="./images/icon-ethereum.svg" alt="">
-                    <p class="price">0.041 ETH</p>
+    <main>
+        <section class="container">
+            <div class="card">
+                <img src="./images/image-equilibrium.jpg" alt="">
+                <div class="text">
+                    <h1 class="title">Equilibrium #3429</h1>
+                    <p>Our Equilibrium collection promotes balance and calm.</p>
                 </div>
-                <div class="date">
-                    <img src="./images/icon-clock.svg" alt="">
-                    <p class="days">3 days left</p>
+                <div class="data">
+                    <div class="value">
+                        <img src="./images/icon-ethereum.svg" alt="">
+                        <p class="price">0.041 ETH</p>
+                    </div>
+                    <div class="date">
+                        <img src="./images/icon-clock.svg" alt="">
+                        <p class="days">3 days left</p>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="owner">
+                    <img src="./images/image-avatar.png" alt="">
+                    <div class="creator">
+                        <p id="creation">Creation of </p>
+                        <p class="name">Jules Wyvern</p>
+                    </div>
                 </div>
             </div>
-            <div class="line"></div>
-            <div class="owner">
-                <img src="./images/image-avatar.png" alt="">
-                <div class="creator">
-                    <p id="creation">Creation of </p>
-                    <p class="name">Jules Wyvern</p>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 </body>
 </html>
